syntax = "proto3";
package auth;
option go_package = "user-service_gc2p3/pb";

message LoginServiceRequest {
  string service_name = 1;
  string password = 2;
}

message LoginServiceResponse {
  string access_token = 1;
}

service AuthService {
  rpc Login(LoginServiceRequest) returns (LoginServiceResponse);
}


